Add basic weather fetching functionality

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div id="description">
-            Today: scattered clouds. The high will be 29
+            Today: scattered clouds. The high will be 29°
         </div>
     </div>
     <div id="additional-temp">
