Add a information change for the week

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div id="header">
         <h2 id="heading">Weather</h2>
         <div id="input-div">
-            <input type="text">
+            <input id="search" type="text">
             <button id="search-button">Search</button>
         </div>
         <button id="temp-toggle">
