--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,22 @@
     <title>Weather</title>
   </head>
   <body>
-    <div id="header">
-        <h2 id="heading">Weather</h2>
-        <div id="input-div">
-            <form action="">
-                <input id="search" type="text" placeholder="Enter a city" required>
-                <button id="search-button">Search</button>
-            </form>
-            <span id="error-message"></span>
+    <div>
+        <div id="header">
+            <h2 id="heading">Weather</h2>
+            <div id="input-div">
+                <form action="">
+                    <input id="search" type="text" placeholder="Enter a city" required>
+                    <button id="search-button">Search</button>
+                </form>
+                
+            </div>
+            <button id="temp-toggle">
+                <p>°C / °F</p>
+            </button>
         </div>
-        <button id="temp-toggle">
-            <p>°C / °F</p>
-        </button>
+        <span id="error-message"></span>
     </div>
-    
     <div id="main-temp">
         <div id="main-container">
             <div id="today-temp">
