Add temperature unit change feature from C to F

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,11 @@
                 </form>
                 
             </div>
-            <button id="temp-toggle">
-                <p>°C / °F</p>
-            </button>
+            <div id="temp-toggle">
+                <p id="celsius" class="selected">°C </p>
+                <p> / </p>
+                <p id="fahrenheit">°F</p>
+            </div>
         </div>
         <span id="error-message"></span>
     </div>
